HTICK 1.9-current
Changes between htick-1.4-stable and htick-1.9-current

1. MAJOR feature improvements:

2. CONFIG changes:

3. IMPORTANT bugfixes:


HTICK 1.4-stable
Changes between htick-1.0-stable and htick-1.4-stable

1. MAJOR feature improvements:
   - configurable announces about received files;
   - purging for file echos with deleting description from files.bbs;
   - New command line option: "-c config-file" - specify alternate config file
     (optional);
   - Change statistics information in log file;
   - Allow unconditional forward subscribe when forwardFileRequestsFile for
     link not defined in config;
   - New command 'ffix!' in addition to 'ffix'. It does the same job as 'ffix'
     and send subscride/unsubscribe letter to link that was manualy
     subscribed/unsubscribed by filefix command	like:
        htick ffix! 2:464/910 -910.TEST
     This command remove file echo link 2:464/910 from 910.TEST and produce
     letter to 2:464/910 with body "-910.TEST";
   - Write documentation at texinfo format.

2. CONFIG changes:
   - area definition options -manual & -mandatory are different:
     '-mandatory' prevent unsubscribe, '-manual' disable subscribe;
   - FileArea parameter '-p <number>' : purge fileecho (files age in days);
   - AnnounceSpool : directory for temporary announce files;
   - AnnAreaTag : Name of area when annouce will be placed, begins new
     announce definition section;
   - AnnAddrFrom : announce message sender address;
   - AnnFrom : announce message sender name;
   - AnnAddrTo : announce message recipient address;
   - AnnTo : announce message recipient name;
   - AnnSubj : announce message subject;
   - AnnInclude : Array of fileecho names|masks that will be announced in
     this annAreaTag;
   - AnnExclude : Array of fileecho names|masks that won't be announced
     in this annAreaTag;
   - AnnMessFlags : announce message flags ("k/s", "loc", "hld", ...);
   - AnnOrigin : origin for announce messages;