@@ -2,10 +2,12 @@ HTICK 1.9-current
 Changes between htick-1.4-stable and htick-1.9-current
 
 1. MAJOR feature improvements:
+  - command line switch "-b" for toss. Force tossing bad tics.
 
 2. CONFIG changes:
 
 3. IMPORTANT bugfixes:
+ - fix filename case conversion under win32.
 
 
 HTICK 1.4-stable
